changed all the header and added the logo

--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -13,33 +13,34 @@
 
   	<body>
   		<header class="grid">
-  			<div class="col-3of12">
-  				<a href="index.html"><img src="http://placehold.it/270x50" width="270" heigh="50"></a>
+  			<div class="col-6of24">
+  				<a href="index.html"><img src="img/logo1.jpg" width="225" heigh="60"></a>
   			</div>
+       
   			<nav class="header">
-	  			<div class="col-1of12">
+	  			<div class="col-2of24">
 	  				<p><a href="about.html">ABOUT</a></p>
 	  			</div>
-	  			<div class="col-1of12">
+	  			<div class="col-2of24">
 	  				<p><a href="news.html">NEWS</a></p>
 	  			</div>
-	  			<div class="col-1of12">
+	  			<div class="col-2of24">
 	  				<p><a href="menu.html">MENU</a></p>
 	  			</div>
-	  			<div class="col-2of12">
+	  			<div class="col-4of24">
 	  				<p><a href="choosenoodle.html">CREATE NOODLES</a></p>
 	  			</div>
-	  			<div class="col-1of12">
+	  			<div class="col-1of24">
 	  				<p></p>
 	  			</div>
-	  			<div class="col-1of12">
+	  			<div class="col-2of24">
 	  				<p><a href="contact.html">CONTACT</a></p>
 	  			</div>
-	  			<div class="col-1of12">
+	  			<div class="col-3of24">
 	  				<p><a href="cart.html">MY CART</a></p>
 	  			</div>
-	  			<div class="col-1of12">
-	  				<p><a href="">SIGN IN</a></p>
+	  			<div class="col-2of24">
+	  				<p><a href="">LOG IN</a></p>
 	  			</div>
   			</nav>
   		</header>
