Changes in the Homepage

--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -47,20 +47,24 @@
     <article id="content">
   		<div class="grid">
     			<div class="col-1of3">
-    				<h1 class="global">NEW STREET SNACK CART NOODLE</h1>
-    				<p class = "homepromo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate. Fusce tempus euismod massa, at tincidunt ante sollicitudin at. Phasellus viverra lobortis orci nec aliquet. Proin fringilla, enim quis porttitor tincidunt, eros orci feugiat nunc, quis feugiat velit nibh ac augue. Cras vel turpis mattis, cursus metus a, pharetra purus. Maecenas non nisi in lectus bibendum semper. Proin sodales vitae quam id ultricies. Integer commodo eros quis diam scelerisque tempus. Sed ut ornare erat. Aliquam feugiat nunc in posuere auctor. Nullam nisl leo, eleifend et libero quis, venenatis auctor ipsum.</p>
+            <div class="rowGlobal">
+      				<h1 class="global">NEW STREET SNACK CART NOODLE</h1>
+      				<p class = "homepromo">It is one of the top three cart noodles. All the toppings are Hong Kong street snack, including curry fish ball, chinese red sasusage, pig blood and chinese radish. It services with our sepcial homemade soup. It would be the best choice if you want to eat many snack at once!</p>
+              <a class="addtocart" href="">ADD TO CART</a>
+            </div>
     			</div>
     			<div class="col-1of3">
-    				<!-- <div id="square"></div> -->
-            <img class="home"src="http://placehold.it/382x319" width="382" heigh="319">
+            <div class="rowGlobal">
+              <img class="home"src="img/bignews1.jpg" width="300" height="300">
+            </div>
     			</div>
     			<div class="col-1of3">
-    				<!-- <div id="square2"></div> -->
-            <img class="homeside"src="http://placehold.it/360x90" width="360" heigh="90">
-    				<!-- <div id="square2"></div> -->
-            <img class="homeside"src="http://placehold.it/360x90" width="360" heigh="90">
-    				<!-- <div id="square2"></div> -->
-            <img class="homeside"src="http://placehold.it/360x90" width="360" heigh="90">
+            <div class="rowGlobalsideimage">
+              <p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p>
+
+              <p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS IN DOWNTOWN</p>
+              <p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p>
+            </div>
     			</div>
     	</div>
     </article>
@@ -69,24 +73,19 @@
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
     			<div class="col-oneof5">
-    				<!-- <div id="square3"></div> -->
             <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
     			</div>
     			<div class="col-oneof5">
             <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    				<!-- <div id="square3"></div> -->
     			</div>
     			<div class="col-oneof5">
             <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    				<!-- <div id="square3"></div> -->
     			</div>
     			<div class="col-oneof5">
             <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    				<!-- <div id="square3"></div> -->
     			</div>
     			<div class="col-oneof5">
             <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    				<!-- <div id="square3"></div> -->
     			</div>
   		</div>
     </article>
