--- a/Week5_Grids/contact.html
+++ b/Week5_Grids/contact.html
@@ -43,10 +43,10 @@
 	  			</div>
   			</nav>
   		</header>
-      <article id="content2">
+      <article id="content">
   		<div class="grid">
   			<div class="col-1of2">
-          <img class="menu"src="http://placehold.it/500x350" width="500" heigh="350">
+          <img class="menu"src="img/store.jpg" width="350">
         </div>
 
         <div class="col-1of2">
