--- a/Week5_Grids/index.html
+++ b/Week5_Grids/index.html
@@ -63,6 +63,7 @@
               <p class="homesideonpage"><img class="homeside"src="img/homeside_s1.jpg" width="250" height="40" alt="Street Snack"> NEW STREET SNACK NOODLE</p>
 
               <p class="homeside"><img class="homeside"src="img/homeside_s2.jpg" width="250" height="40">NEW STORE OPENS IN DOWNTOWN</p>
+
               <p class="homeside"><img class="homeside"src="img/homeside_s3.jpg" width="250" height="40">PROMOTION CODE: get1free</p>
             </div>
     			</div>
@@ -73,21 +74,36 @@
     		<h1 class="topFive">TOP FIVE CART NOODLES</h1>
     		<div class="grid">
     			<div class="col-oneof5">
-            <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
+            <img class="homebottom"src="img/nood1.jpg" width="170" height="170">
+            <p class="homeNrow">Fishball Nood</p>
+            <p class="homeProw">$9.99</p>
+            <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
+            <img class="homebottom"src="img/nood2.jpg" width="170" height="170">
+            <p class="homeNrow">Healthy Nood</p>
+            <p class="homeProw">$9.99</p>
+            <img class="rating"src="img/star.jpg">
+          </div>
+    			<div class="col-oneof5">
+            <img class="homebottom"src="img/nood3.jpg" width="170" height="170">
+            <p class="homeNrow">Beef Lover</p>
+            <p class="homeProw">$9.99</p>
+            <img class="rating"src="img/star.jpg">
+          </div>
+    			<div class="col-oneof5">
+            <img class="homebottom"src="img/nood4.jpg" width="170" height="170">
+            <p class="homeNrow">Pork Lover</p>
+            <p class="homeProw">$9.99</p>
+            <img class="rating"src="img/star.jpg">
     			</div>
     			<div class="col-oneof5">
-            <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
+            <img class="homebottom"src="img/nood5.jpg" width="170" height="170">
+            <p class="homeNrow">Vege Nood</p>
+            <p class="homeProw">$9.99</p>
+            <img class="rating"src="img/star.jpg">
     			</div>
-    			<div class="col-oneof5">
-            <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    			</div>
-    			<div class="col-oneof5">
-            <img class="homebottom"src="http://placehold.it/180x170" width="180" heigh="170">
-    			</div>
-  		</div>
+  		  </div>
     </article>
   	</body>
 </html>
