--- a/Week5_Grids/menu.html
+++ b/Week5_Grids/menu.html
@@ -44,7 +44,7 @@
   			</nav>
   		</header>
 
-  		<article id="content2">
+  		<article id="content">
   		<div class="grid">
   			<div class="col-1of5">
   				<a class="side" href="#cartnoodles">Cart Noodles</a>
@@ -52,163 +52,217 @@
           		<a class="side" href="#drinks">Drinks</a>
           		<a class="side" href="#dessert">Dessert</a>
   			</div>
+
   			<div class="col-4of5">
   				<article id="cartnoodles">
   					<h1 class="global">CART NOODLES</h1>
-  					<div class="col-1of3" id="menu">
 
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-  						<p class="cartNrow">Noodle 1</p>
+  					<div class="col-1of3" id="menu">
+              <img class="menu"src="img/nood1.jpg" width="210" height="150">
+  						<p class="cartNrow">Fishball Nood</p>
   						<p class="cartProw">$9.99</p>
-  						<p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
   					</div>
+
   					<div class="col-1of3" id="menu">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 2</p>
+  						<img class="menu"src="img/nood2.jpg" width="210" height="150">
+              <p class="cartNrow">Healthy Nood</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
   					</div>
+
   					<div class="col-1of3" id="menu">
-  						<img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 3</p>
+  						<img class="menu"src="img/nood3.jpg" width="210" height="150">
+              <p class="cartNrow">Beef Lover</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
   					</div>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 1</p>
+              <img class="menu"src="img/nood4.jpg" width="210" height="150">
+              <p class="cartNrow">Pork Lover</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 2</p>
+              <img class="menu"src="img/nood5.jpg" width="210" height="150">
+              <p class="cartNrow">Vege Nood</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Noodle 3</p>
+              <img class="menu"src="img/nood6.jpg" width="210" height="150">
+              <p class="cartNrow">Soft Nood</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Curry fried fishballs with homemade special soup</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
-  				</article>
+          </article>
+
   				<article id="soup">
             <h1 class="global">Soup</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 1</p>
+              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 2</p>
+              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 3</p>
+              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 4</p>
+              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 5</p>
+              <img class="menu"src="img/soup.jpg" width="210" height="150">
+              <p class="cartNrow">Carrot Pork Soup</p>
               <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
-            </div>
-            <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Soup 6</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <p class="cartDrow">Carrot, potato and juicy pork</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">56 Comments</a>
             </div>
   				</article>
+
   				<article id="drinks">
             <h1 class="global">Drinks</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 1</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 2</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 3</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 4</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 5</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Drinks 6</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/drink.jpg" width="210" height="150">
+              <p class="cartNrow">Ice Lemon Tea</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Red tea with slides of lemon</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">19 Comments</a>
             </div>
   				</article>
+
   				<article id="dessert">
             <h1 class="global">Desserts</h1>
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 1</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <p class="cartNrow">French Toast</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">23 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 2</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <p class="cartNrow">French Toast</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">23 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 3</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <p class="cartNrow">French Toast</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">23 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 4</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <p class="cartNrow">French Toast</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">23 Comments</a>
             </div>
+
             <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 5</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
+              <img class="menu"src="img/dessert.jpg" width="210" height="150">
+              <p class="cartNrow">French Toast</p>
+              <p class="cartProw">$1.5</p>
+              <p class="cartDrow">Soak bread in eggs and add milk and sugar</p>
+              <img class="rating"src="img/star.jpg">
+              <a class="prodcomment" href="">23 Comments</a>
             </div>
-            <div class="col-1of3" id="menu">
-              <img class="menu"src="http://placehold.it/230x150" width="230" heigh="150">
-              <p class="cartNrow">Desserts 6</p>
-              <p class="cartProw">$9.99</p>
-              <p class="cartDrow">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget libero eget arcu ullamcorper vulputate.</p>
-            </div>
+
   				</article>
   			</div>
   		</div>
