--- a/Week5_Grids/cart.html
+++ b/Week5_Grids/cart.html
@@ -44,12 +44,13 @@
   			</nav>
   		</header>
 
-      	<article id="content2">
+      	<article id="content">
       		
   			<div class="grid">
   				<div class="col-1of5">
   					<h1 class="cartpage">MY CART</h1> 
   				</div>
+
   				<div class="col-4of5">
   					<article id="paddingleft">
 		  				<div class="col-2of4">
@@ -58,10 +59,12 @@
 		  					<h3>Noodle 1</h3>
 		  					<p class="cart"><a class="cart" href="">VIEW DETAILS</a> / <a class="cart" href="">REMOVE</a></p>
 		  				</div>
+
 		  				<div class="col-1of4">
 		  					<h3>QUANTITY</h3>
 		  					<h3>1</h3>
 		  				</div>
+
 		  				<div class="col-1of4">
 		  					<h3>PRICE</h3>
 		  					<h3>$5.99</h3>
@@ -69,20 +72,19 @@
 	  				</article>
   				</div>
   			</div>
+
   			<div class="grid">
   				<div class="col-4of5" id="carttotal">
-  					<article id="paddingleft">
-	  					<div class="col-1of4" id="total">	
-	  						<h3 class ="cart">$5.99</h3>
-	  						<h3 class ="cart">$0.30</h3>
-	  						<h3>$6.29</h3>
-	  					</div>
-	  					<div class="col-1of4" id="total">
-	  						<h3 class="cart">SUB-TOTAL:</h3>
-	  						<h3 class="cart">GST/HST:</h3>
-	  						<h3>TOTAL:</h3>
-	  					</div>
-  					</article>
+  					<div class="col-1of4" id="total">	
+  						<h3 class ="cart">$5.99</h3>
+  						<h3 class ="cart">$0.30</h3>
+  						<h3>$6.29</h3>
+  					</div>
+  					<div class="col-1of4" id="total">
+  						<h3 class="cart">SUB-TOTAL:</h3>
+  						<h3 class="cart">GST/HST:</h3>
+  						<h3>TOTAL:</h3>
+  					</div>
   				</div>
 	  		</div>
   		</article>
