--- a/Week5_Grids/choosenoodle.html
+++ b/Week5_Grids/choosenoodle.html
@@ -44,7 +44,7 @@
   			</nav>
   		</header>
 
-  		<article id="content2">
+  		<article id="content">
   			<div class="grid">
   			<div class="col-1of5">
   				<a class="sideonpage" href="choosenoodle.html">Step 1:<br>Choose Noodle</a>
