--- a/Week5_Grids/personalbillinginfo.html
+++ b/Week5_Grids/personalbillinginfo.html
@@ -44,7 +44,7 @@
   			</nav>
   		</header>
 
-  		<article id="content2">
+  		<article id="content">
   			<div class="grid">
 	  			<div class="col-1of5">
 	  				<a class="side" href="cart.html">My Cart</a>
